--- a/partials/trackerAccess/statSelect.html
+++ b/partials/trackerAccess/statSelect.html
@@ -1,27 +1,32 @@
 <div id="trackerStatSelect">
+
+    <h3 class="text-center">vs. {{game.opposition}}</h3>
+    <h3 class="text-center">at {{game.location}}</h3>
+    <h3 class="text-center">on {{game.date | date:'MM/dd/yyyy'}}</h3>
         
     <h2 class="text-center">Select Stat</h2> 
     
-    <form>  
-    
-            <div ng-repeat="stat in stats" class="form-check">
-                <label class="form-check-label">
-                <input type="checkbox" class="form-check-input">
-                {{statType.name}}
-                </label>
-            </div>
+                
+    <table class="table table-hover">
+        <thead class="thead-light">
+            <tr>
+                <!-- <th scope="col-md-1" class="justify-right col-md-1"></th> -->
+                <th scope="col" class="col-md-1"></th>
+                <th scope="col" class="col-md-1"></th>
+            </tr>
+        </thead>
 
-            <div class="form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
-                    Option two can be something else and selecting it will deselect option one
-                </label>
-            </div>
+    <tbody class="table-striped" ng-repeat="gameStat in gameStats">
+        <tr>
+            <td class="col-md-1">
+                <button class="text-right btn" ng-click="trackNow(gameStat.id)">Track</button>
+            </td>
+            <td class="col-md-1">{{gameStat.statTypeId}}</td> 
+        </tr>
+    </tbody>
 
-            <div class="form-group col-md-4 col-md-offset-4">
-                <button class="btn" ng-click="saveTeamStatTypes(statTypes, team)">Done</button>
-            </div>
-
-    </form>
+    <div class="row form-group col-md-4 col-md-offset-4">
+        <button class="btn" ng-click="goToTeamDashboard(game.teamId)">Back</button>
+    </div>
     
 </div>
