--- a/partials/coachAccess/statSelect.html
+++ b/partials/coachAccess/statSelect.html
@@ -1,24 +1,28 @@
 <div id="coachStatSelect">
 
         <h2 class="text-center">Select Stats to be Tracked</h2> 
-        <h3 class="text-center">The number of stats selected should be based on how many Trackers you expect on a consistent basis.</h3>
+        <h4 class="text-center">The number of stats selected should be based on how many Trackers you expect on a consistent basis.</h4>
         
     <form name="coachStatForm">
 
-        <div class="form-check" ng-repeat="statType in statTypes">
-
-            <label class="form-check-label">{{statType.name}}
+        <div class="form-checkt row selectStats" ng-repeat="statType in statTypes">
+            
+            <div class="col-md-2 col-md-offset-5 col-xs-7 col-xs-offset-3">
                 <input class="form-check-input" type="checkbox" ng-model="teamStatType[statType.id]" ng-true-value="'{{statType.name}}'" ng-false-value="false">
-            </label><br/>
+                <label class="form-check-label">{{statType.name}}</label>
+                <br/>
+            </div>
+
         </div>
         
 
-            <div class="form-group col-md-4 col-md-offset-4">
-                <button ng-click="addSelectedStatsToTeam()" type="submit" class="btn">Next</button>
-            </div>
-                <!-- <tt>value1 = {{checkboxModel.value1}}</tt><br/>
-                <tt>value2 = {{checkboxModel.value2}}</tt><br/> -->
+        <div class="form-group ">
+            <button ng-click="addSelectedStatsToTeam()" type="submit" class="btn col-md-2 col-md-offset-5 col-xs-6 col-xs-offset-3">Next</button>
+        </div>
+
     </form>
+
+</div>
 
 
 
