--- a/sass/main.scss
+++ b/sass/main.scss
@@ -139,3 +139,39 @@ text-align: right;
 	max-height: 345px;
 	overflow-y: scroll;
 }
+
+#trackControls {
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 50px;
+	margin-bottom: 70px;
+	font-size: 300%;
+
+	.trackBtn {
+		font-size: 125% !important;
+	}
+}
+
+#trackerStatSelect {
+	.table {
+		font-size: 125% !important;
+		border: none;
+		margin-left: 20px;
+		margin-right: 65px;
+	}
+	.statType {
+		vertical-align: center !important;
+	}
+
+	.btn {
+		font-size: 60% !important;
+	}
+}
+
+#coachStatSelect {
+	.selectStats{
+		margin-top: 20px;
+		margin-bottom: 20px;
+		font-size: 125%;
+	}
+}
