tracked stats display on game insights view

--- a/partials/coachAccess/pastGameResolveAndEdit.html
+++ b/partials/coachAccess/pastGameResolveAndEdit.html
@@ -3,7 +3,7 @@
      <h2 class="text-center">Enter Final Outcome to Generate Insights</h2>
 
         <form>
-            <h4 class="col-md-4 col-md-offset-4">{{fbGame.opposition}}, {{fbGame.date | date:'MM/dd/yyyy'}}</h4>
+            <h4 class="col-md-4 col-md-offset-4">{{game.opposition}}, {{game.date | date:'MM/dd/yyyy'}}</h4>
                         
             <div class="form-group col-md-4 col-md-offset-4">
                 <label for="gameOpposition">Select Outcome</label>
