--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -14,6 +14,9 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <!-- <ul class="nav navbar-nav navbar-right" ng-show="userHasTeam">
+                <li><a ng-href="/teams/:teamId/insights" ng-click="viewInsights()">Insights</a></li>
+            </ul> -->
             <ul class="nav navbar-nav navbar-right" ng-show="userLoggedIn">
                 <li><a ng-href="#!/auth" ng-click="logoutUser()">Logout</a></li>
             </ul>
