--- a/partials/trackerAccess/statSelect.html
+++ b/partials/trackerAccess/statSelect.html
@@ -20,7 +20,7 @@
                 <td class="col-md-1 text-right">
                     <button class="btn" ng-click="trackNow(gameStat.id)">Track</button>
                 </td>
-                <td class="col-md-1 statType">{{gameStat.statTypeId}}</td> 
+                <td class="col-md-1 statType text-capitalize">{{gameStat.statTypeId}}</td> 
             </tr>
         </tbody>
 
