--- a/partials/trackerAccess/statTrack.html
+++ b/partials/trackerAccess/statTrack.html
@@ -1,7 +1,7 @@
 <div>
 
     <h2 class="text-center">vs. {{game.opposition}}</h2>
-    <h1 class="text-center">Track {{stat.statTypeId}}</h1>
+    <h1 class="text-center text-capitalize">Track {{stat.statTypeId}}</h1>
 
     <div class="row" id="trackControls">
 
@@ -11,7 +11,7 @@
 
     </div>
 
-    <div class="row form-group ">
+    <div class="row form-group">
         <button class="btn col-md-2 col-md-offset-5 col-xs-4 col-xs-offset-4" ng-click="goToTeamDashboard(game.teamId)">Game Over</button>
     </div>
     
