--- a/partials/teamDashboard.html
+++ b/partials/teamDashboard.html
@@ -33,9 +33,9 @@
         <div id="coachGameSchedule">
                 
         <table class="table table-hover">
-            <thead>
+            <thead class="thead-default">
                 <tr>
-                    <th scope="col-md-1" class="justify-right col-md-1"></th>
+                    <th scope="col-md-1 col-md-offset-3" class="justify-right"></th>
                     <th scope="col" class="col-md-1">Opposing Team</th>
                     <th scope="col" class="col-md-1">Location</th>
                     <th scope="col" class="col-md-1">Date</th>
@@ -45,6 +45,9 @@
                 <tbody class="table-striped" ng-if="game.outcome === '';" ng-repeat="game in games | orderBy:'date'">
                     <tr>
                         <td class="col-md-1" id="coach-buttons">
+                            <button class="btn" ng-if="game.status === 'upcoming'" ng-click="deleteGame(game)">
+                                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                            </button>
                             <button class="btn" ng-if="game.status === 'upcoming'" ng-click="editGame(game)">Edit</button>
                             <button class="btn" ng-if="game.status === 'pending' " ng-click="finalizeGame(game)">Finalize</button>
                         </td>
@@ -61,7 +64,7 @@
         
         <div class="row" id="teamDashButtonGroup">
             <button ng-click="addGame(teamId)" type="submit" class="td-button-group btn">Add Game</button>
-            <button ng-click="viewPastGames(teamId)" type="submit" class="td-button-group btn">Game History</button>
+            <button ng-click="viewPastGames(teamId)" type="submit" class="td-button-group btn">Game Insights</button>
         </div>
 
     </div>
@@ -72,7 +75,7 @@
         
         <table class="table table-hover" id="coachGameSchedule">
 
-            <thead class="thead-light">
+            <thead class="thead-default">
                 <tr>
                     <th scope="col" class="col-md-1"></th>
                     <th scope="col" class="col-md-1">Opposing Team</th>
@@ -82,7 +85,7 @@
                 </tr>
             </thead>
 
-            <tbody class="table-striped" ng-if="game.status === 'upcoming' " ng-repeat="game in games | orderBy:'date'">
+            <tbody class="table-striped" ng-if="game.status === 'upcoming'" ng-repeat="game in games | orderBy:'date'">
                 <tr>
 
                     <td class="col-md-1">
@@ -99,9 +102,23 @@
         </table>
 
         <div class="row">
-            <button ng-click="viewPastGames(teamId)" type="submit" class="col-md-4 col-md-offset-4 btn col-xs-4 col-xs-offset-4 btn">Game History</button>
+            <button ng-click="viewPastGames(teamId)" type="submit" class="col-md-4 col-md-offset-4 btn col-xs-4 col-xs-offset-4 btn">Game Insights</button>
         </div>
     </div>
 
+    <!-- <div>
+            <h3 class="text-center">Insights</h3>
 
+            <div ng-repeat="teamStatType in teamStatTypes" id="chartDiv">
+
+            </div> -->
+    
+            <!-- <div  id="insightsButtonGroup">
+                <div ng-repeat="teamStatType in teamStatTypes">
+                <button type="submit" ng-click"viewStat(teamStatType.statTypeId)" class="td-button-group btn">{{teamStatType.statTypeId}}</button>
+                </div>
+            </div> -->
+        
+        <!-- </div> -->
+    
 </div>
